--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@ Donec semper sagittis tellus, id molestie quam suscipit sit amet. Aenean posuere
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="prg_sequence_hint_text">Press "ADD..." to add a step in sequence.\nPress short to add 5s.\nLong press to edit or remove step.</string>
+    <string name="torso_footer_address">Torso-Verlag e.K. Obere Grueben 8\nDE-97877 Wertheim Tel. +49(0)93242 933970</string>
 
 
 </resources>
