--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -54,6 +54,10 @@ Donec semper sagittis tellus, id molestie quam suscipit sit amet. Aenean posuere
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="prg_sequence_hint_text">Press "ADD..." to add a step in sequence.\nPress short to add 5s.\nLong press to edit or remove step.</string>
     <string name="torso_footer_address">Torso-Verlag e.K. Obere Grueben 8\nDE-97877 Wertheim Tel. +49(0)93242 933970</string>
+    <string name="about_app_info_static">Hi-Tec-Support GmbH\nCopyright (R) 2018</string>
+    <string name="about_app_info_version_label">Hi-Tec-Support GmbH\nCopyright (R) 2018\nVersion " + sFormattedDate + "\nFirmware version: " + sFWverLcl);</string>
+    <string name="about_app_info_FWversion_label">Firmware version:</string>
+    <string name="about_app_info_hyperlink">www.unitycolor.com</string>
 
 
 </resources>
