additional helper functions to highlight / dehighlight a button and other

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@ Donec semper sagittis tellus, id molestie quam suscipit sit amet. Aenean posuere
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="prg_sequence_hint_text">Press "ADD..." to add a step in sequence.\nPress short to add 5s.\nLong press to edit or remove step.</string>
     <string name="torso_footer_address">Torso-Verlag e.K. Obere Grueben 8\nDE-97877 Wertheim Tel. +49(0)93242 933970</string>
-    <string name="about_app_info_static">Hi-Tec-Support GmbH\nCopyright (R) 2018</string>
+    <string name="about_app_info_static">UnityColor LED Control System\n\u00a9 Torso-Verlag 2020</string>
     <string name="about_app_info_version_label">Hi-Tec-Support GmbH\nCopyright (R) 2018\nVersion " + sFormattedDate + "\nFirmware version: " + sFWverLcl);</string>
     <string name="about_app_info_FWversion_label">Firmware version:</string>
     <string name="about_app_info_hyperlink">www.unitycolor.com</string>
@@ -62,6 +62,11 @@ Donec semper sagittis tellus, id molestie quam suscipit sit amet. Aenean posuere
     <string name="maintenance_page_setting_1_label">TL84 Full</string>
     <string name="maintenance_page_setting_2_label">TL84 Dim</string>
     <string name="maintenance_page_setting_3_label">Max PSU (mA)</string>
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
+    <string name="overlay_no_connection_msg">Unable to communicate with the device. Check bluetooth connection.</string>
 
 
 </resources>
